# education_examples

./: .clang-format  LICENSE  README.md
.github/workflows/: basic_build.yml  basic_checks.yml
cpp_singleton/: CMakeLists.txt  singleton_example.cpp
